--- a/index.html
+++ b/index.html
@@ -96,21 +96,21 @@
                     <div class="main__info">
                         <h5 class="main__info_sobre">
                             <i class="fa-solid fa-repeat"></i>
-                             trocas grátis
+                             Trocas Grátis
                         </h5>
                         <p class="main__info_descricao">Troque suas compras com facilidade no site ou lojas físicas</p>
                     </div>
                     <div class="main__info">
                         <h5 class="main__info_sobre">
                             <i class="fa-solid fa-truck-fast"></i>
-                            frete grátis
+                            Frete Grátis
                         </h5>
                         <p class="main__info_descricao">Em compras a partir de R$400 ou com o código do vendedor*</p>
                     </div>
                     <div class="main__info">
                         <h5 class="main__info_sobre">
                             <i class="fa-brands fa-pix"></i>
-                            pague com PIX
+                            Pague Com PIX
                         </h5>
                         <p class="main__info_descricao">Ganhe 5% de desconto nas compras feitas com PIX</p>
                     </div>
